--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>テトリス</title>
+    <title>煮物作テトリス</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
             <h2>モード選択</h2>
             <div class="mode-buttons">
                 <button class="mode-btn" data-mode="endless">エンドレス</button>
-                <button class="mode-btn" data-mode="lines40">40列クリア</button>
-                <button class="mode-btn" data-mode="lines20">20列クリア</button>
+                <button class="mode-btn" data-mode="lines40">40列</button>
+                <button class="mode-btn" data-mode="lines20">20列</button>
                 <button class="mode-btn" data-mode="rising">ライジング</button>
                 <button class="mode-btn" data-mode="timeattack">タイムアタック (1分)</button>
             </div>
